<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 android:layout_width="match_parent"
											 android:layout_height="wrap_content">

	<TextView
		android:id="@+id/tv_terms"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_default"
		android:onClick="showTermDetails"
		android:text="@string/footer_terms"
		android:textColor="@android:color/black"
		android:textSize="@dimen/text_small"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/tv_privacy"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_default"
		android:onClick="showPrivacyDetails"
		android:text="@string/footer_privacy"
		android:textColor="@android:color/black"
		android:textSize="@dimen/text_small"
		app:layout_constraintLeft_toRightOf="@id/tv_terms"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/tv_copyright"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_default"
		android:onClick="showCopyrightDetails"
		android:text="@string/footer_copyright"
		android:textColor="@android:color/black"
		android:textSize="@dimen/text_small"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>