<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@android:color/white"
			  android:baselineAligned="false"
			  android:clickable="true"
			  android:orientation="vertical">

	<FrameLayout
		android:id="@+id/iv_voucher"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/padding_default">

		<android.support.v7.widget.CardView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			app:cardCornerRadius="7dp"
			app:cardElevation="0dp">

			<de.cmc.android.utils.WrapContentViewPager
				android:id="@+id/pager"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>

		</android.support.v7.widget.CardView>

		<de.cmc.android.utils.CircleIndicator
			android:id="@+id/circle_indicator"
			android:layout_width="match_parent"
			android:layout_height="@dimen/detail_indicator"
			android:layout_gravity="bottom"/>

		<ImageButton
			android:id="@+id/ib_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_margin="@dimen/margin_small"
			android:background="@drawable/buttonshape_navigation"
			android:onClick="backToOverView"
			android:src="@drawable/ic_chevron_left_white_24dp"
			tools:ignore="ContentDescription"/>

		<ImageButton
			android:id="@+id/ib_quit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_margin="@dimen/margin_small"
			android:background="@drawable/buttonshape_navigation"
			android:onClick="quitDialog"
			android:src="@drawable/ic_clear_white_24dp"
			tools:ignore="ContentDescription"/>

	</FrameLayout>

	<RelativeLayout
		android:id="@+id/layout_voucher"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/margin_default"
			android:layout_marginStart="@dimen/margin_default"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/iv_campaign_logo"
				android:layout_width="@dimen/detail_logo_width"
				android:layout_height="@dimen/detail_logo_height"
				android:layout_alignParentStart="true"
				android:layout_centerInParent="true"
				android:layout_centerVertical="true"
				android:scaleType="fitStart"
				tools:ignore="ContentDescription"/>

			<ImageButton
				android:id="@+id/ib_limitations"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:background="@drawable/ic_info_outline_black_24dp"
				android:backgroundTint="@color/colorAccentCmc"
				tools:ignore="ContentDescription"/>

		</RelativeLayout>


		<RelativeLayout
			android:id="@+id/layout_discount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/tv_discount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:gravity="center"
				android:textColor="@android:color/black"
				android:textSize="@dimen/text_medium"
				android:textStyle="bold"
				tools:text="10% Gutschein*"/>

		</RelativeLayout>

		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@id/layout_discount"
			android:layout_marginEnd="@dimen/margin_default"
			android:layout_marginStart="@dimen/margin_default"
			android:layout_marginTop="@dimen/margin_default"
			android:background="@color/colorDivider"/>

		<LinearLayout
			android:id="@+id/layout_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginTop="@dimen/margin_default"
			android:gravity="center"
			android:orientation="vertical">

			<EditText
				android:id="@+id/et_email"
				android:layout_width="match_parent"
				android:layout_height="@dimen/detail_view_height"
				android:layout_marginEnd="@dimen/margin_default"
				android:layout_marginStart="@dimen/margin_default"
				android:background="@drawable/edit_text_border"
				android:gravity="center"
				android:hint="@string/email_hint"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:textSize="@dimen/text_large"
				tools:text="max.mustermann@email.com"/>

			<Button
				android:id="@+id/bt_show_voucher"
				android:layout_width="match_parent"
				android:layout_height="@dimen/detail_view_height"
				android:layout_marginBottom="@dimen/margin_default"
				android:layout_marginLeft="@dimen/margin_default"
				android:layout_marginRight="@dimen/margin_default"
				android:layout_marginTop="@dimen/margin_small"
				android:background="@drawable/buttonshape"
				android:text="@string/show_voucher"
				android:textColor="@android:color/white"
				android:textSize="@dimen/text_large"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/layout_terms"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/layout_buttons"
			android:layout_below="@id/divider"
			android:layout_marginEnd="@dimen/margin_small"
			android:layout_marginStart="@dimen/margin_small"
			android:layout_marginTop="@dimen/margin_default"
			android:gravity="center"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/cb_terms"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:buttonTint="@color/colorAccentCmc"/>

			<TextView
				android:id="@+id/tv_terms_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/detail_terms"
				android:textColor="@android:color/black"
				android:textSize="@dimen/text_small"/>
		</LinearLayout>

	</RelativeLayout>


</LinearLayout>